Fix for border issue of login/submit/forgotpassword buttons on Firefox/Safari.

--- a/src/App.css
+++ b/src/App.css
@@ -481,8 +481,8 @@ body {
   padding: 12px 45px;
   margin-top: 60px;
   margin-bottom: 20px;
+  border: none;
   border-radius: 25px;
-  border-color: var(--color-blue-light);
   background-color: var(--color-blue-light);
   color: var(--color-login);
   cursor: pointer;
